# CodingAgentAutomata

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/repositories/: cli_adapter_repository.py  system_settings_repository.py  task_repository.py  user_repository.py
backend/routers/: auth.py  cli_adapters.py  settings.py  tasks.py  users.py  webhooks.py
backend/schemas/: auth.py  cli_adapter.py  settings.py  task.py  user.py  webhook.py
backend/services/: auth_service.py  cli_adapter_service.py  model_candidate_service.py  system_settings_service.py  task_service.py  user_service.py  virtual_key_service.py  webhook_service.py
consumer/: Dockerfile  cli_adapter_resolver.py  cli_container_manager.py  cli_log_masker.py  consumer.py  ebpf_environment_checker.py  issue_to_mr_converter.py  mr_processor.py  progress_manager.py  prompt_builder.py  pyproject.toml  task_processor.py  tty_wait_detector.py  virtual_key_service.py
default-template/: f3_prompt_template.md  f4_prompt_template.md
docs/: chat-要件定義.md  copilot-cli-auth-headless.md  detail_design.md  ebpf-dind-investigation.md  request.md  requirements.md
e2e/: global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
litellm/: config-real.yml  config.yml
mock-llm/: Dockerfile  server.py
producer/: Dockerfile  gitlab_event_handler.py  polling_loop.py  producer.py  pyproject.toml  webhook_server.py
scripts/: build_cli_exec.sh  debug_docker_run.py  gitlab_setup.py  register_system_hook.py  setup.py  setup.sh  test_setup.py  test_setup.sh  test_system_hook.py  (+1 more)
shared/: __init__.py  pyproject.toml  shutdown_state.py
shared/config/: __init__.py  config.py
shared/database/: __init__.py  database.py
shared/gitlab_client/: __init__.py  gitlab_client.py
shared/messaging/: __init__.py  rabbitmq_client.py
shared/models/: __init__.py  db.py  gitlab.py  task.py
(+51 files in other folders)
