[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "consumer"
version = "0.1.0"
description = "RabbitMQからタスクをデキューしてCLIコンテナを管理するコンポーネント"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "docker>=7.0",
    "pika>=1.3",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cryptography>=42.0",
]

[tool.setuptools.packages.find]
where = ["."]
