[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "producer・consumer・backend で共有するユーティリティモジュール"
requires-python = ">=3.12"
dependencies = [
    "python-gitlab>=4.0",
    "pika>=1.3",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
